--- a/style.css
+++ b/style.css
@@ -15,8 +15,18 @@ body,html{
 body{
     background:hsl(185, 75%, 39%);
     font-family: 'Roboto', sans-serif;
+    background-image: url(./images/bg-pattern-top.svg),url(./images/bg-pattern-bottom.svg);
+    background-position:left top,left,right bottom,right;
+    background-repeat: no-repeat;
+    /* #change the positio of image to left :corner-present */
+    background-position: -300px -480px;
 }
 
+
+body img .top-img{
+    translate: -100px -50px;
+    opacity: .7;
+}
 .container{
     width: 100%;
     height: 100%;
@@ -73,4 +83,72 @@ body{
     width: auto;
     color: black;
     opacity: .5;
+}
+.bottom-subcard{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height:110px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 100%;
+    margin-top: -5px;
+}
+
+.bottom-subcard .bottom-left{
+ /* background-color: red; */
+ width:33%;
+ height: 95%;   
+ border-bottom-left-radius: 10px;
+ text-align: center;
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+}
+.bottom-subcard .bottom-mid{
+    /* background-color: yellow; */
+    height: 95%;
+    width: 33%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.bottom-subcard .bottom-right{
+    /* background-color: green; */
+    height: 95%;
+    width: 33%;
+    border-bottom-right-radius: 10px;
+    text-align: center;
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+}
+.bottom-left h1{
+    font-size: 20px;
+}
+.bottom-left h3{
+    font-size: 10px;
+    opacity: .4;
+    letter-spacing: 1px;
+    padding-top: 5px;
+}
+.bottom-mid h1{
+    font-size: 20px;
+}
+.bottom-mid h3{
+    font-size: 10px;
+    opacity: .4;
+    letter-spacing: 1px;
+    padding-top: 5px;
+}
+
+.bottom-right h1{
+    font-size: 20px;
+}
+.bottom-right h3{
+    font-size: 10px;
+    opacity: .4;
+    letter-spacing: 1px;
+    padding-top: 5px;
 }
